fixing card spacing and header content padding

--- a/scss/_utilities.scss
+++ b/scss/_utilities.scss
@@ -12,7 +12,7 @@
     padding: 1.5rem 2rem;
     border-radius: 25px;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
     display: flex;
     flex-direction: column;
 
