--- a/scss/main.scss
+++ b/scss/main.scss
@@ -89,7 +89,7 @@ a {
     #home-a {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
-        padding: 2rem 0;
+        padding: 3rem 0;
         align-items: center;
         text-align: left;
         // background: white;
